--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -59,6 +59,7 @@
             // Timeout needed because the URL changes immediately after
             // the `unload` event is dispatched.
             setTimeout(dispatchChange, 0);
+            iframe.style.visibility = 'hidden';
           };
 
           function attachUnload() {
@@ -70,9 +71,9 @@
 
           iframe.addEventListener("load", function() {
             attachUnload();
-
             // Just in case the change wasn't dispatched during the unload event...
             dispatchChange();
+            iframe.style.visibility = 'visible';
           });
 
           attachUnload();
