--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -10,7 +10,7 @@
     paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
     <p:column filterBy="#{task.state}" styleClass="icon-row">
       <h:outputText id="taskState" styleClass="si si-lg si-#{task.stateIcon}" />
-      <p:tooltip for="taskState" value="State: #{task.state}" position="top" />
+      <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top" />
     </p:column>
 
     <p:column id="priority" filterBy="#{task.priority}" styleClass="icon-row">
