--- a/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
@@ -12,7 +12,7 @@
     <f:param name="task" value="#{task.id}"/>
     <i class="si si-task-list-edit p-mr-1" />
     <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} p-mr-1" />
-    <p:tooltip for="taskState" value="State: #{task.state}" position="top"/>
+    <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top"/>
     <h:outputText id="taskLink" value="#{task.name}" />
     <p:tooltip for="taskLink" value="ID: #{task.id}" position="top"/>
   </h:link>
