--- a/dev-workflow-ui/webContent/includes/components/casesTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/casesTable.xhtml
@@ -21,7 +21,7 @@
     </p:column>
 
     <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
-      <h:outputText id="caseState" styleClass="si si-lg si-#{casesIvyDevWfBean.getStateIcon(case.state)}" />
+      <h:outputText id="caseState" styleClass="si si-lg si-#{casesIvyDevWfBean.getStateIcon(case.businessState)}" />
       <p:tooltip for="caseState" value="State: #{case.businessState} (#{case.state})" position="top" />
     </p:column>
 
