--- a/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
@@ -26,13 +26,7 @@
     <h:outputText value="State" />
     <h:outputText>
       <i class="si si-#{tasksDetailsIvyDevWfBean.selectedTask.stateIcon} p-mr-1" />
-      <h:outputText value="#{tasksDetailsIvyDevWfBean.selectedTask.businessState}" id="taskState" />
-    </h:outputText>
-
-    <h:outputText value="Technical state" />
-    <h:outputText>
-      <i class="si si-#{tasksDetailsIvyDevWfBean.selectedTask.stateIcon} p-mr-1"></i>
-      <h:outputText value="#{tasksDetailsIvyDevWfBean.selectedTask.state}" id="taskTechnicalState" />
+      <h:outputText value="#{tasksDetailsIvyDevWfBean.selectedTask.businessState} (#{tasksDetailsIvyDevWfBean.selectedTask.state})" id="taskState" />
     </h:outputText>
 
     <h:outputText value="Business case" />
