--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
   </f:facet>
   <title>Login - #{ivyAdvisor.applicationName} #{ivyAdvisor.versionShort}</title>
-  <link rel="shortcut icon" href="#{resource['ivy-webcontent:resources/images/favicon.png']}" />
+  <link rel="shortcut icon" href="#{resource['ivy-branding:favicon']}" />
 </h:head>
 
 <f:metadata>
