XIVY-11246 Fix npe after user switch if orignal url is case/task detail
The problem is not that the case/task id is not on the parameter, the
problem is that if you do a redirect to the login page, then a POST
request is first triggered (without any query params). The original URL
is then evaluated from this POST request instead of the inital page
request.

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -56,16 +56,16 @@
                   </p:link>
                 </li>
                 <li>
-                  <p:commandLink id="loginTableBtn" actionListener="#{loginIvyDevWfBean.redirectToLoginTable}" rendered="#{engineModeIvyDevWfBean.demoOrDesigner}">
+                  <p:link id="loginTableBtn" href="loginTable.xhtml?originalUrl=#{loginIvyDevWfBean.originalPage}" rendered="#{engineModeIvyDevWfBean.demoOrDesigner}">
                     <i class="si si-lg si-multiple-neutral-1"></i>
                     <span>Switch user</span>
-                  </p:commandLink>
+                  </p:link>
                 </li>
                 <li>
-                  <p:commandLink id="loginFormBtn" actionListener="#{loginIvyDevWfBean.redirectToLoginForm}">
+                  <p:link id="loginFormBtn" href="login.xhtml?originalUrl=#{loginIvyDevWfBean.originalPage}">
                     <i class="si si-lg si-login-3"></i>
                     <span>Login</span>
-                  </p:commandLink>
+                  </p:link>
                 </li>
                 <li>
                   <p:commandLink id="sessionLogoutBtn" actionListener="#{loginIvyDevWfBean.logout}"
