XIVY-11120 Fix swagger-ui in designer

--- a/dev-workflow-ui/webContent/view/api-browser.xhtml
+++ b/dev-workflow-ui/webContent/view/api-browser.xhtml
@@ -13,10 +13,10 @@
           <i class="p-pr-3 si si-network-browser card-title-icon"></i>
           <h2 class="p-m-0">API Browser</h2>
           <p:linkButton id="browseApiBtn" icon="si si-network-browser" styleClass="p-ml-auto rounded-button"
-            target="_blank" href="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html"/>
+            target="_blank" href="/system/api-browser/index.html"/>
           <p:tooltip for="browseApiBtn" value="Open API browser in a new tab" position="top"/>
         </div>
-        <iframe id="apiBrowser" src="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html" class="api-browser-frame"/>
+        <iframe id="apiBrowser" src="/system/api-browser/index.html" class="api-browser-frame"/>
       </div>
     </ui:define>
   </ui:composition>
