--- a/dev-workflow-ui/webContent/resources/components/customFields.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/customFields.xhtml
@@ -9,7 +9,8 @@
 <cc:implementation>
   <p:dataTable id="customFieldsTable" var="field" value="#{cc.attrs.customFields}">
     <p:column headerText="Name">
-      <h:outputText value="#{field.label}" title="#{field.description}"/>
+      <h:outputText id="customFieldLabel" value="#{field.label}"/>
+      <p:tooltip for="customFieldLabel" value="#{field.description}" position="top"/>
     </p:column>
     <p:column headerText="Value">
       <h:outputText value="#{field.value}"/>
