--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -245,3 +245,32 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   padding-top: 0;
   padding-bottom: 0.75em;
 }
+
+/* Notifications */
+.notification-badge {
+  width:22px; height:20px;
+  font-weight:bold; font-size:13px; color:white;
+  position:absolute; bottom:30px; left:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:10px;
+  background-color:var(--ivy-primary-color);
+}
+.notification-button.si {
+  font-size: 1.2em;
+}
+.notification-container {
+  padding:10px;
+  padding-left:0px;
+  padding-right:0px;
+  margin-bottom:0.15em;
+}
+.notification-scroll {
+  overflow:scroll;
+  max-height:600px;
+}
+.notification-scroll::-webkit-scrollbar {
+  display: none;
+}
+
