--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -266,11 +266,11 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   padding-right:0px;
   margin-bottom:0.15em;
 }
-.ui-datascroller-content.ui-widget-content.ui-corner-all {
+body .notification-scroll>.ui-datascroller-content  {
   border: 0px;
   padding: 2px;
 }
-.ui-datascroller-content.ui-widget-content.ui-corner-all::-webkit-scrollbar {
+body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
   display: none;
 }
 
