--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -44,6 +44,12 @@
               </p:commandLink>
             </li>
 
+            <li class="topbar-item">
+              <a href="#{sidebarIvyDevWfBean.cockpitPath}" title="Engine Cockpit">
+                <i class="topbar-icon si si-cog animated swing"></i>
+              </a>
+            </li>
+
             <li class="topbar-item user-profile">
               <a href="#">
                 <span class="profile-image-wrapper">
