Add vscode connection

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -11,6 +11,7 @@
   </f:facet>
   <h:outputScript name="js/layout.js" library="freya-layout" />
   <h:outputScript name="resources/js/copyToClipboard.js" />
+  <h:outputScript name="resources/js/vscodeConnection.js" />
 
   <title><ui:insert name="title">#{ivyAdvisor.applicationName} #{ivyAdvisor.versionShort}</ui:insert></title>
   <link rel="shortcut icon" href="#{resource['ivy-branding:favicon']}" />
