XIVY-12427 Add vscode connection to login page

--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -12,6 +12,7 @@
   </f:facet>
   <title>Login - #{ivyAdvisor.applicationName} #{ivyAdvisor.versionShort}</title>
   <link rel="shortcut icon" href="#{resource['ivy-branding:favicon']}" />
+  <h:outputScript name="resources/js/vscodeConnection.js" />
 </h:head>
 
 <f:metadata>
