--- a/dev-workflow-ui/webContent/includes/template/notifications.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/notifications.xhtml
@@ -37,7 +37,7 @@
         <p:dataScroller id="notifications" lazy="true" styleClass="notification-scroll" value="#{notificationBean.dataModel}" var="notification" chunkSize="20" mode="inline">
           <div class="#{notification.style} notification-container">
             <div class="p-d-flex p-jc-between">
-              <h:outputText id="notificationMessage" value="#{notification.message}" />
+              <h:outputText id="notificationMessage" value="#{notification.message}" escape="false"/>
 
               <div class="p-d-flex">
                 <p:commandLink id="notificationMarkAsRead" process="@this" rendered="#{!notification.read}" actionListener="#{notificationBean.markAsRead(notification)}" update="notifications unreadNotifications">
