XIVY-12632 rename task details page

--- a/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
@@ -8,8 +8,8 @@
 
 <cc:implementation>
   <ui:param name="task" value="#{tasksIvyDevWfBean.toTaskLinkModel(cc.attrs.task)}"/>
-  <h:link outcome="taskDetails" styleClass="p-d-flex p-ai-center">
-    <f:param name="task" value="#{task.uuid}"/>
+  <h:link outcome="task" styleClass="p-d-flex p-ai-center">
+    <f:param name="id" value="#{task.uuid}"/>
     <i class="si si-task-list-edit p-mr-1" />
     <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} p-mr-1" />
     <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top"/>
