--- a/dev-workflow-ui/webContent/view/task.xhtml
+++ b/dev-workflow-ui/webContent/view/task.xhtml
@@ -6,7 +6,7 @@
 
 <h:body>
   <f:metadata>
-    <f:viewParam name="task" value="#{tasksDetailsIvyDevWfBean.selectedTaskId}" />
+    <f:viewParam name="id" value="#{tasksDetailsIvyDevWfBean.selectedTaskId}" />
   </f:metadata>
 
   <ui:composition template="../includes/template/template.xhtml">
