--- a/dev-workflow-ui/webContent/view/case.xhtml
+++ b/dev-workflow-ui/webContent/view/case.xhtml
@@ -7,7 +7,7 @@
 
 <h:body>
   <f:metadata>
-    <f:viewParam name="case" value="#{casesDetailsIvyDevWfBean.selectedCaseId}" />
+    <f:viewParam name="id" value="#{casesDetailsIvyDevWfBean.selectedCaseId}" />
   </f:metadata>
 
   <ui:composition template="../includes/template/template.xhtml">
