--- a/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/caseLink.xhtml
@@ -8,7 +8,7 @@
 
 <cc:implementation>
   <h:link styleClass="case-link p-d-flex p-ai-center" outcome="case">
-    <f:param name="case" value="#{cc.attrs.case.uuid()}"/>
+    <f:param name="id" value="#{cc.attrs.case.uuid()}"/>
     <i class="si si-task-list-approve p-mr-1" />
     <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(cc.attrs.case.getBusinessState())} p-mr-1"/>
     <p:tooltip for="caseState" value="State: #{cc.attrs.case.businessState} (#{cc.attrs.case.state})" position="top"/>
