move setting visible

--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -72,7 +72,6 @@
             attachUnload();
             // Just in case the change wasn't dispatched during the unload event...
             dispatchChange();
-            iframe.style.visibility = 'visible';
           });
 
           attachUnload();
@@ -119,6 +118,9 @@
             var newPage = checkAndReturnUrl(newURL, originPage);
             if (newPage) {
               window.location = newPage;
+            }
+            else {
+              iframe.style.visibility = 'visible';
             }
           }
         });
