XIVY-13226 fix flickering when frame content gets unloaded (#299)

--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -59,6 +59,7 @@
             // Timeout needed because the URL changes immediately after
             // the `unload` event is dispatched.
             setTimeout(dispatchChange, 0);
+            iframe.style.visibility = 'hidden';
           };
 
           function attachUnload() {
@@ -72,7 +73,6 @@
             attachUnload();
             // Just in case the change wasn't dispatched during the unload event...
             dispatchChange();
-            iframe.style.visibility = 'visible';
           });
 
           attachUnload();
@@ -119,6 +119,9 @@
             var newPage = checkAndReturnUrl(newURL, originPage);
             if (newPage) {
               window.location = newPage;
+            }
+            else {
+              iframe.style.visibility = 'visible';
             }
           }
         });
