--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -79,6 +79,10 @@
         }
 
         function checkAndReturnUrl(newURL, originPage) {
+          // http://localhost:8081/dev-workflow-ui/faces/task.xhtml?id=79c2c5de-37de-43c9-96ab-4d3d144fd172
+          if (newURL.includes('task.xhtml')){
+            return newURL.substring(newURL.indexOf('task.xhtml'));
+          }
           if (newURL.includes('?endedTaskId=')) {
             return originPage;
           }
@@ -108,6 +112,7 @@
           if (iframe.contentWindow.location.pathname.match("/default/redirect.xhtml")) {
             var redirectedPage = new URLSearchParams(iframe.contentWindow.location.search).get("redirectPage");
             var newPage = checkAndReturnUrl(redirectedPage, originPage);
+            console.log("newPage: " + newPage);
             if (newPage) {
               window.location = newPage;
             }
@@ -117,6 +122,7 @@
           }
           else {
             var newPage = checkAndReturnUrl(newURL, originPage);
+            console.log("newPage: " + newPage);
             if (newPage) {
               window.location = newPage;
             }
