XIVY-13639 Add notification subscription to user profile page
Add a notification subscription section to the user profile page

Implement new standard process to navigate to the notification
subscription settings page of a user

--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -280,3 +280,19 @@ body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
    padding: 0 .5rem 0 .5rem;
 }
 
+.state-active {
+  color: var(--success-color, #2aa483);
+}
+
+.state-inactive {
+  color: var(--error-color, #d23636);
+}
+
+.ui-datatable .table-icon,
+.ui-treetable .table-icon {
+  position: relative;
+  top: 3px;
+  font-size: 1.2em;
+  margin-right: 5px;
+}
+
