--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -3,6 +3,7 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html"
   xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component"
+  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
   xmlns:p="http://primefaces.org/ui"
   xmlns:pe="http://primefaces.org/ui/extensions">
 
@@ -57,6 +58,36 @@
 
             <h:outputLabel for="roles" styleClass="details-description-label">Roles</h:outputLabel>
             <h:outputText id="roles" value="#{profileBean.roles}"></h:outputText>
+
+            <h:outputLabel for="Notification" styleClass="details-description-label">Notification Channels</h:outputLabel>
+            <p:dataTable paginator="true" rows="10" paginatorPosition="bottom" paginatorAlwaysVisible="false"
+                var="event" value="#{profileBean.notificationChannels.events}" id="notificationChannelsTable"
+                lazy="false" styleClass="ui-fluid" rowIndexVar="rowIndex">
+
+              <p:column headerText="Event" sortBy="#{event.displayName}">
+                <h:panelGroup id="event">
+                  <h:outputText value="#{event.displayName}" styleClass="event-kind" />
+                  <i class="si si-question-circle"></i>
+                </h:panelGroup>
+                <p:tooltip for="profileForm:notificationChannelsTable:#{rowIndex}:event" value="#{event.description}" position="top" styleClass="pre-tooltip" />
+              </p:column>
+
+              <p:columns id="channels" var="channel" value="#{profileBean.notificationChannels.channels}" style="text-align: center">
+                <f:facet name="header">
+                  <h:outputText value="#{channel.channel.displayName()}">
+                    <i class="#{channel.channel.displayIcon()} table-icon" />
+                  </h:outputText>
+                </f:facet>
+
+                <c:set var="subscription" value="#{channel.getSubscription(event)}"/>
+                <i class="si table-icon si-#{subscription.icon} subscription-icon" title="#{subscription.title}"
+                    style="padding-right: 10px; vertical-align: top" />
+                <p:triStateCheckbox id="subscriptionCheckbox" value="#{subscription.stateAsString}">
+                  <p:ajax event="change" update="profileForm" listener="#{channel.setSubscriptionIconAndTitle(event)}" />
+                </p:triStateCheckbox>
+              </p:columns>
+            </p:dataTable>
+
           </p:panelGrid>
           <p:commandButton id="saveBtn" value="Save"
             icon="si si-floppy-disk"
