--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -296,3 +296,7 @@ body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
   margin-right: 5px;
 }
 
+.table-icon.light {
+  opacity: 0.5;
+}
+
