--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -257,7 +257,7 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   border-radius:10px;
   background-color:var(--ivy-primary-color);
 }
-.notification-button.si {
+.notification-action.si {
   font-size: 1.2em;
 }
 .notification-container {
@@ -265,6 +265,12 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
   padding-left:0px;
   padding-right:0px;
   margin-bottom:0.15em;
+}
+.notification-message {
+  color: var(--primary-text-color);
+}
+.notification-action-container {
+  align-items: center;
 }
 body .notification-scroll>.ui-datascroller-content  {
   border: 0px;
@@ -278,25 +284,5 @@ body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
 /* Detail Info-Banner */
 .info-banner-wrapper {
    padding: 0 .5rem 0 .5rem;
-}
-
-.state-active {
-  color: var(--success-color, #2aa483);
-}
-
-.state-inactive {
-  color: var(--error-color, #d23636);
-}
-
-.ui-datatable .table-icon,
-.ui-treetable .table-icon {
-  position: relative;
-  top: 3px;
-  font-size: 1.2em;
-  margin-right: 5px;
-}
-
-.table-icon.light {
-  opacity: 0.5;
 }
 
